force-app/main/default/objects/Chorus_Data_Event__e/Chorus_Data_Event__e.object-meta.xml
<CustomObject>
    <description>An event for workato to collect whenever a chorus record is created under certain conditions as described in the trigger affectlayerEngagementTrigger</description>
    <label>Chorus Data Event</label>
    <pluralLabel>Chorus Data Events</pluralLabel>
</CustomObject>