force-app/main/default/objects/Chorus_Data_Event__e/fields/AI_JSON_Payload__c.field-meta.xml
<CustomField>
    <fullName>AI_JSON_Payload__c</fullName>
    <label>AI JSON Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>