force-app/main/default/objects/Chorus_Data_Event__e/fields/Champion_AI__c.field-meta.xml
<CustomField>
    <fullName>Champion_AI__c</fullName>
    <label>Champion AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>