force-app/main/default/objects/Chorus_Data_Event__e/fields/Decision_Criteria_Competition_AI__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Competition_AI__c</fullName>
    <label>Decision Criteria Competition AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>