force-app/main/default/objects/Chorus_Data_Event__e/fields/Decision_Process_AI__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_AI__c</fullName>
    <label>Decision Process AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>