force-app/main/default/objects/Chorus_Data_Event__e/fields/Economic_Buyer_AI__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_AI__c</fullName>
    <label>Economic Buyer AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>