force-app/main/default/objects/Chorus_Data_Event__e/fields/Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Id__c</fullName>
    <label>Engagement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>