force-app/main/default/objects/Chorus_Data_Event__e/fields/Identify_Pain_AI__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain_AI__c</fullName>
    <label>Identify Pain AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>