force-app/main/default/objects/Chorus_Data_Event__e/fields/Metrics_AI__c.field-meta.xml
<CustomField>
    <fullName>Metrics_AI__c</fullName>
    <label>Metrics AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>