force-app/main/default/objects/Chorus_Data_Event__e/fields/Paper_Process_AI__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process_AI__c</fullName>
    <label>Paper Process AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>